data/all_generated_tests/raw_wast_tests/br_MismanagementofBlockNesting_546.wast
;; 7. **Mixed Control Structures:**    Use a mix of `block`, `loop`, and `if` constructs nested within each other with `br` instructions targeting different levels of nesting. Validate if the orchestration of these mixed structures preserves the correct flow when a branch is issued.

(assert_invalid
  (module (func $mixed-control-structure
    (block (result i32)
      (loop (result i64)
        (if (i32.const 1)
          (then
            (br 1) ;; Invalid: mismatched types in block and loop
          )
        )
      )
    )
    (i32.const 0) (drop)
  ))
  "type mismatch"
)